--- a/lib/adoptoposs_web/templates/interest/reply.html.heex
+++ b/lib/adoptoposs_web/templates/interest/reply.html.heex
@@ -1,5 +1,8 @@
 <p>
-  On <%= Timex.format!(@interest.inserted_at, "{D}/{M}/{YY} {h12}:{m} {AM}") %>, <%= link @interest.creator.name, to: @interest.creator.profile_url %> wrote:
+  On <%= Timex.format!(@interest.inserted_at, "{D}/{M}/{YY} {h12}:{m} {AM}") %>, <%= link(
+    @interest.creator.name,
+    to: @interest.creator.profile_url
+  ) %> wrote:
 </p>
 
 <blockquote cite={@project_url}>
