--- a/lib/adoptoposs_web/templates/landing_page/dashboard.html.heex
+++ b/lib/adoptoposs_web/templates/landing_page/dashboard.html.heex
@@ -2,6 +2,6 @@
   <h1>Your Dashboard</h1>
 
   <div>
-    <%= render AdoptopossWeb.LandingPageView, "recommendations.html", assigns %>
+    <%= render(AdoptopossWeb.LandingPageView, "recommendations.html", assigns) %>
   </div>
 </section>
