--- a/lib/adoptoposs_web/templates/page/privacy.html.heex
+++ b/lib/adoptoposs_web/templates/page/privacy.html.heex
@@ -20,7 +20,10 @@
   </p>
 
   <p>
-    The only times we’ll ever share your info is to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of our <%= link "Code of Conduct", to: "https://github.com/adoptoposs/adoptoposs/blob/main/CODE_OF_CONDUCT.md" %>, or as otherwise required by law.
+    The only times we’ll ever share your info is to investigate, prevent, or take action regarding illegal activities, suspected fraud, situations involving potential threats to the physical safety of any person, violations of our <%= link(
+      "Code of Conduct",
+      to: "https://github.com/adoptoposs/adoptoposs/blob/main/CODE_OF_CONDUCT.md"
+    ) %>, or as otherwise required by law.
   </p>
 
   <h2 class="mb-2 mt-6">Your Rights With Respect to Your Information</h2>
@@ -31,33 +34,44 @@
 
   <ul class="list-disc list-inner pb-4 pl-6">
     <li>
-      <b>Right of Access.</b> This includes your right to access the personal information we gather about you, and your right to obtain information about the sharing, storage, security and processing of that information.
+      <b>Right of Access.</b>
+      This includes your right to access the personal information we gather about you, and your right to obtain information about the sharing, storage, security and processing of that information.
     </li>
     <li>
-      <b>Right to Correction.</b> This is your right to request correction of your personal information.
+      <b>Right to Correction.</b>
+      This is your right to request correction of your personal information.
     </li>
     <li>
-      <b>Right to Erasure.</b> This is your right to request, subject to certain limitations under applicable law, that your personal information be erased from our possession (also known as the “Right to be forgotten”).  However, if applicable law requires us to comply with your request to delete your information, fulfillment of your request may prevent you from using Adoptoposs services and may result in closing your account.
+      <b>Right to Erasure.</b>
+      This is your right to request, subject to certain limitations under applicable law, that your personal information be erased from our possession (also known as the “Right to be forgotten”).  However, if applicable law requires us to comply with your request to delete your information, fulfillment of your request may prevent you from using Adoptoposs services and may result in closing your account.
     </li>
     <li>
-      <b>Right to Complain.</b> You have the right to make a complaint regarding our handling of your personal information with the appropriate supervisory authority.
+      <b>Right to Complain.</b>
+      You have the right to make a complaint regarding our handling of your personal information with the appropriate supervisory authority.
     </li>
     <li>
-      <b>Right to Restrict Processing.</b> This is your right to request restriction of how and why your personal information is used or processed.
+      <b>Right to Restrict Processing.</b>
+      This is your right to request restriction of how and why your personal information is used or processed.
     </li>
     <li>
-      <b>Right to Object.</b> This is your right, in certain situations, to object to how or why your personal information is processed.
+      <b>Right to Object.</b>
+      This is your right, in certain situations, to object to how or why your personal information is processed.
     </li>
     <li>
-      <b>Right to Portability.</b> This is your right to receive the personal information we have about you and the right to transmit it to another party.
+      <b>Right to Portability.</b>
+      This is your right to receive the personal information we have about you and the right to transmit it to another party.
     </li>
     <li>
-      <b>Right to not be subject to Automated Decision-Making.</b> This is your right to object and prevent any decision that could have a legal, or similarly significant, effect on you from being made solely based on automated processes. This right is limited, however, if the decision is necessary for performance of any contract between you and us, is allowed by applicable European law, or is based on your explicit consent.
+      <b>Right to not be subject to Automated Decision-Making.</b>
+      This is your right to object and prevent any decision that could have a legal, or similarly significant, effect on you from being made solely based on automated processes. This right is limited, however, if the decision is necessary for performance of any contract between you and us, is allowed by applicable European law, or is based on your explicit consent.
     </li>
   </ul>
 
   <p>
-    Many of these rights can be exercised by logging in and directly updating your account information. If you have questions about exercising these rights or need assistance, please contact us by <%= link "opening a GitHub issue", to: "https://github.com/adoptoposs/adoptoposs/issues/new" %>.
+    Many of these rights can be exercised by logging in and directly updating your account information. If you have questions about exercising these rights or need assistance, please contact us by <%= link(
+      "opening a GitHub issue",
+      to: "https://github.com/adoptoposs/adoptoposs/issues/new"
+    ) %>.
   </p>
 
   <p>
@@ -75,16 +89,18 @@
 
     <ul class="list-disc list-inner ml-6">
       <li>
-        <%= link "Fly.io", to: "https://fly.io/legal/privacy-policy/" %>. Cloud service provider.
+        <%= link("Fly.io", to: "https://fly.io/legal/privacy-policy/") %>. Cloud service provider.
       </li>
       <li>
-        <%= link "Honeybadger", to: "https://www.honeybadger.io/privacy/" %>. Application health monitoring service.
+        <%= link("Honeybadger", to: "https://www.honeybadger.io/privacy/") %>. Application health monitoring service.
       </li>
       <li>
-        <%= link "Mailgun", to: "https://www.mailgun.com/gdpr/" %>. Text messaging service.
+        <%= link("Mailgun", to: "https://www.mailgun.com/gdpr/") %>. Text messaging service.
       </li>
       <li>
-        <%= link "Google Analytics", to: "https://support.google.com/analytics/answer/6004245?hl=en" %>. Web analytics service.
+        <%= link("Google Analytics",
+          to: "https://support.google.com/analytics/answer/6004245?hl=en"
+        ) %>. Web analytics service.
       </li>
     </ul>
   </p>
@@ -98,7 +114,9 @@
   <h2 class="mb-2 mt-6">Security & Encryption</h2>
 
   <p>
-    All data is encrypted via <%= link "SSL/TLS", to: "https://en.wikipedia.org/wiki/Transport_Layer_Security" %> when transmitted from our servers to your browser. Data isn’t encrypted while it's live in our database (since it needs to be ready to send to you when you need it).
+    All data is encrypted via <%= link("SSL/TLS",
+      to: "https://en.wikipedia.org/wiki/Transport_Layer_Security"
+    ) %> when transmitted from our servers to your browser. Data isn’t encrypted while it's live in our database (since it needs to be ready to send to you when you need it).
   </p>
 
   <h2 class="mb-2 mt-6">Cookies</h2>
@@ -113,7 +131,6 @@
     When you cancel your account, we'll ensure that all data you entered is removed from our database.
   </p>
 
-
   <h2 class="mb-2 mt-6">Location of Site and Data</h2>
 
   <p>
@@ -127,10 +144,14 @@
   </p>
 
   <p>
-    Questions about this privacy policy? Please <%= link "open an issue", to: "https://github.com/adoptoposs/adoptoposs/issues/new" %> and we’ll be happy to answer them!
+    Questions about this privacy policy? Please <%= link("open an issue",
+      to: "https://github.com/adoptoposs/adoptoposs/issues/new"
+    ) %> and we’ll be happy to answer them!
   </p>
 
   <p class="italic text-gray-600 text-base">
-    Adapted from the <%= link "Basecamp open-source policies", to: "https://github.com/basecamp/policies" %> / <%= link "CC BY 4.0", to: "https://creativecommons.org/licenses/by/4.0/" %>
+    Adapted from the <%= link("Basecamp open-source policies",
+      to: "https://github.com/basecamp/policies"
+    ) %> / <%= link("CC BY 4.0", to: "https://creativecommons.org/licenses/by/4.0/") %>
   </p>
 </section>
