--- a/lib/adoptoposs_web/templates/shared/cookies-banner.html.heex
+++ b/lib/adoptoposs_web/templates/shared/cookies-banner.html.heex
@@ -1,5 +1,10 @@
-<div class="w-full fixed bottom-0 bg-gray-900 flex items-center justify-center py-4 cookies-box hidden" id="cookies-banner">
-  <p class="text-white text-center m-0">By using this website you agree to our <a href="/privacy">Cookie Policy</a>.</p>
+<div
+  class="w-full fixed bottom-0 bg-gray-900 flex items-center justify-center py-4 cookies-box hidden"
+  id="cookies-banner"
+>
+  <p class="text-white text-center m-0">
+    By using this website you agree to our <a href="/privacy">Cookie Policy</a>.
+  </p>
   <a id="close-cookies-banner" class="absolute w-auto right-0 top-0 cursor-pointer text-3xl p-2">
     &times;
   </a>
