--- a/lib/adoptoposs_web/templates/shared/footer.html.heex
+++ b/lib/adoptoposs_web/templates/shared/footer.html.heex
@@ -2,7 +2,11 @@
   <div class="flex flex-row flex-wrap justify-between">
     <ul>
       <li><a href="/faq" title="Frequently Asked Questions">FAQ</a></li>
-      <li><a href="https://github.com/adoptoposs/adoptoposs/issues/new" title="Open an Issue">Found any bug?</a></li>
+      <li>
+        <a href="https://github.com/adoptoposs/adoptoposs/issues/new" title="Open an Issue">
+          Found any bug?
+        </a>
+      </li>
       <li><a href="/privacy" title="Privacy Policy">Privacy Policy</a></li>
       <li><a href="https://twitter.com/adoptoposs" title="Contact">Contact</a></li>
     </ul>
@@ -14,7 +18,10 @@
 
   <div class="text-center text-red-400 mt-4 mb-0">
     Made with ♡ |
-    <.link href="https://github.com/phoenixframework/phoenix_live_view" title="Phoenix LiveView">Phoenix LiveView</.link> |
+    <.link href="https://github.com/phoenixframework/phoenix_live_view" title="Phoenix LiveView">
+      Phoenix LiveView
+    </.link>
+    |
     <.link href="https://tailwindcss.com" title="TailwindCSS">Tailwind CSS</.link>
   </div>
 </section>
