--- a/lib/adoptoposs_web/templates/shared/meta_tags.html.heex
+++ b/lib/adoptoposs_web/templates/shared/meta_tags.html.heex
@@ -5,21 +5,19 @@
 <% twitter_card_type = AdoptopossWeb.SharingView.twitter_card_type(assigns) %>
 
 <title><%= title %></title>
-<meta content={title} name="title">
-<meta content={description} name="description">
+<meta content={title} name="title" />
+<meta content={description} name="description" />
 
-<%# Open Graph tags %>
-<meta content="website" property="og:type">
-<meta content={url} property="og:url">
-<meta content={title} property="og:title">
-<meta content={description} property="og:description">
-<meta content={image} property="og:image">
-<meta content="Adoptoposs" property="og:site_name">
+<meta content="website" property="og:type" />
+<meta content={url} property="og:url" />
+<meta content={title} property="og:title" />
+<meta content={description} property="og:description" />
+<meta content={image} property="og:image" />
+<meta content="Adoptoposs" property="og:site_name" />
 
-<%# Twitter tags %>
-<meta content={twitter_card_type} name="twitter:card">
-<meta content={url} name="twitter:url">
-<meta content={title} name="twitter:title">
-<meta content={description} name="twitter:description">
-<meta content={image} name="twitter:image">
-<meta content="@adoptoposs" name="twitter:site">
+<meta content={twitter_card_type} name="twitter:card" />
+<meta content={url} name="twitter:url" />
+<meta content={title} name="twitter:title" />
+<meta content={description} name="twitter:description" />
+<meta content={image} name="twitter:image" />
+<meta content="@adoptoposs" name="twitter:site" />
