--- a/lib/adoptoposs_web/templates/error/403.html.heex
+++ b/lib/adoptoposs_web/templates/error/403.html.heex
@@ -1,9 +1,15 @@
 <section class="flex flex-grow flex-col justify-center items-center ">
   <h1>Adoptoposs says no way!</h1>
-  <p class="text-red-400 text-6xl">4<span class="inline-block">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" class="fill-current h-12 w-12">>
-      <path d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm5-9v2H5V9h10z"/>
+  <p class="text-red-400 text-6xl">
+    4<span class="inline-block">
+    <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 20 20"
+        class="fill-current h-12 w-12"
+      >>
+      <path d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm0-2a8 8 0 1 0 0-16 8 8 0 0 0 0 16zm5-9v2H5V9h10z" />
     </svg>
-  </span>3</p>
+  </span>3
+  </p>
   <p>Looks like you are not allowed to look at this…</p>
 </section>
