--- a/lib/adoptoposs_web/templates/explore/index.html.heex
+++ b/lib/adoptoposs_web/templates/explore/index.html.heex
@@ -5,7 +5,8 @@
     <div class="w-full md:w-2/3">
       <div class="flex items-center">
         <form class="inline-flex w-full" phx-submit="search" phx-change="search">
-          <input type="text"
+          <input
+            type="text"
             class="search flex-grow h-16 pl-8 pr-12 my-2 max-w-full"
             id="search"
             name="q"
@@ -13,7 +14,8 @@
             autocomplete="off"
             autofocus
             placeholder="Search projects"
-            phx-debounce="200" />
+            phx-debounce="200"
+          />
         </form>
 
         <%= unless @query in [nil, ""] do %>
@@ -31,12 +33,18 @@
 
           <div class="border-b-2 mb-2 pb-4 md:pb-0 md:mb-0 md:border-none md:inline-block">
             <div class="block w-full md:hidden">
-              <.live_component module={AdoptopossWeb.ProjectFiltersComponent} {Map.merge(assigns, %{id: "filters-dropdown", dropdown: true})} />
+              <.live_component
+                module={AdoptopossWeb.ProjectFiltersComponent}
+                {Map.merge(assigns, %{id: "filters-dropdown", dropdown: true})}
+              />
             </div>
 
             <%= if Enum.count(@filters) > 0 do %>
               <div class="hidden md:inline-block justify-start mt-2 md:m-0">
-                <button class="button-link inline leading-none inline-flex items-center" phx-click="clear_filters">
+                <button
+                  class="button-link inline leading-none inline-flex items-center"
+                  phx-click="clear_filters"
+                >
                   clear all <span class="text-2xl ml-1">&times;</span>
                 </button>
               </div>
@@ -52,28 +60,36 @@
       <%= if @query && @page == 1 && @total_count == 0 && Enum.empty?(@projects) do %>
         <div class="flex items-center justify-center text-center p-4 h-32 md:h-48 min-h-full bg-white rounded border border-gray-300">
           <span class="text-pink-900 md:text-lg font-medium">
-            Sorry, no projects found for <span class="text-red-500 break-all">"<%= @query %>"</span> :(
+            Sorry, no projects found for
+            <span class="text-red-500 break-all">"<%= @query %>"</span>
+            :(
           </span>
         </div>
       <% else %>
-        <div id="projects"
-           class="grid grid-flow-row gap-4"
-           phx-update={@update}
-           phx-hook="InfiniteScroll"
-           data-page={@page}>
+        <div
+          id="projects"
+          class="grid grid-flow-row gap-4"
+          phx-update={@update}
+          phx-hook="InfiniteScroll"
+          data-page={@page}
+        >
           <%= for project <- @projects do %>
-            <.live_component module={AdoptopossWeb.ProjectComponent}
+            <.live_component
+              module={AdoptopossWeb.ProjectComponent}
               id={"project-#{project.id}"}
               project={project}
-              user_id={@user_id} />
+              user_id={@user_id}
+            />
           <% end %>
         </div>
       <% end %>
     </div>
 
     <div class="hidden md:flex self-stretch w-1/3 ml-8">
-      <.live_component module={AdoptopossWeb.ProjectFiltersComponent}
-        {Map.put(assigns, :id, "filters-sidebar")} />
+      <.live_component
+        module={AdoptopossWeb.ProjectFiltersComponent}
+        {Map.put(assigns, :id, "filters-sidebar")}
+      />
     </div>
   </div>
 </section>
