--- a/lib/adoptoposs_web/templates/layout/error.html.heex
+++ b/lib/adoptoposs_web/templates/layout/error.html.heex
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <%= render AdoptopossWeb.SharedView, "meta_tags.html", assigns %>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <%= render(AdoptopossWeb.SharedView, "meta_tags.html", assigns) %>
 
-    <link rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
-    <%= render AdoptopossWeb.SharedView, "google_analytics.html" %>
+    <link rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")} />
+    <%= render(AdoptopossWeb.SharedView, "google_analytics.html") %>
 
     <%= csrf_meta_tag() %>
-    <script defer type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+    <script defer type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}>
+    </script>
   </head>
 
   <body>
@@ -20,13 +21,24 @@
       <nav role="navigation">
         <div class="flex items-center shrink-0 mr-6">
           <a href="/" class="font-semibold text-xl tracking-tight">
-            <img src={Routes.static_path(@conn, "/images/adoptoposs-logo.png")} alt="Adoptoposs" class="h-10"/>
+            <img
+              src={Routes.static_path(@conn, "/images/adoptoposs-logo.png")}
+              alt="Adoptoposs"
+              class="h-10"
+            />
           </a>
         </div>
 
         <div class="block lg:hidden">
           <button class="flex items-center px-3 py-2 border-red-300">
-            <svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+            <svg
+              class="fill-current h-5 w-5"
+              viewBox="0 0 20 20"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <title>Menu</title>
+              <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z" />
+            </svg>
           </button>
         </div>
 
@@ -41,7 +53,7 @@
     </main>
 
     <footer class="bg-gray-900 text-red-400 py-6 md:py-10">
-      <%= render AdoptopossWeb.SharedView, "footer.html", assigns %>
+      <%= render(AdoptopossWeb.SharedView, "footer.html", assigns) %>
     </footer>
   </body>
 </html>
