--- a/lib/adoptoposs_web/templates/shared/google_analytics.html.heex
+++ b/lib/adoptoposs_web/templates/shared/google_analytics.html.heex
@@ -3,11 +3,11 @@
 <%= if ga_id do %>
   <!-- Google Analytics -->
   <script>
-  window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-  ga('create', '<%= ga_id %>', 'auto');
-  ga('send', 'pageview');
+    window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+    ga('create', '<%= ga_id %>', 'auto');
+    ga('send', 'pageview');
   </script>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <script async src="https://www.google-analytics.com/analytics.js">
+  </script>
   <!-- End Google Analytics -->
 <% end %>
-
