--- a/lib/adoptoposs_web/templates/shared/project_repo.html.heex
+++ b/lib/adoptoposs_web/templates/shared/project_repo.html.heex
@@ -1,9 +1,10 @@
 <div class="flex w-full flex-col justify-between">
   <h2 class="text-xl mt-0 leading-tight mb-2">
-    <%= link project_name(@project),
+    <%= link(project_name(@project),
       to: project_url(@project),
       class: "text-pink-900 break-all",
-      title: project_name(@project) %>
+      title: project_name(@project)
+    ) %>
   </h2>
 
   <div class="markdown text-gray-600">
@@ -11,9 +12,10 @@
   </div>
 
   <div class="flex flex-row justify-between items-center mt-2 md:mt-4">
-    <%= render AdoptopossWeb.SharedView, "language_tag.html",
-        name: @project.language.name,
-        color: @project.language.color,
-        class: "text-gray-700" %>
+    <%= render(AdoptopossWeb.SharedView, "language_tag.html",
+      name: @project.language.name,
+      color: @project.language.color,
+      class: "text-gray-700"
+    ) %>
   </div>
 </div>
