--- a/lib/adoptoposs_web/templates/sharing/project.html.heex
+++ b/lib/adoptoposs_web/templates/sharing/project.html.heex
@@ -6,7 +6,7 @@
 
     <%= if @project do %>
       <p class="text-gray-600 text-center text-2xl md:text-4xl leading-tight">
-        Contact <span class="">@<%= @project.user.username %></span> to join <br>
+        Contact <span class="">@<%= @project.user.username %></span> to join <br />
         <span class=""><%= AdoptopossWeb.SharedView.project_name(@project) %></span>!
       </p>
     <% end %>
@@ -14,10 +14,12 @@
 
   <section class="mt-6 md:mt-12">
     <%= if @project do %>
-      <.live_component module={AdoptopossWeb.ProjectComponent}
+      <.live_component
+        module={AdoptopossWeb.ProjectComponent}
         id={"project-#{@project.id}"}
         project={@project}
-        user_id={@user_id} />
+        user_id={@user_id}
+      />
     <% else %>
       <div class="text-center text-xl md:text-2xl h-48">
         <p>The project is not available anymore or the link is invalid.</p>
@@ -32,17 +34,14 @@
 
     <%= unless @user_id do %>
       <div class="flex flex-row items-center my-6 md:my-8 mt-12 md:mt-16">
-        <hr class="flex-grow border-red-300">
+        <hr class="flex-grow border-red-300" />
         <div class="self-center">
-          <.link
-            navigate={Routes.auth_path(@socket, :request, "github")}
-            class="button-link mx-3">
+          <.link navigate={Routes.auth_path(@socket, :request, "github")} class="button-link mx-3">
             Log in with GitHub
           </.link>
         </div>
-        <hr class="flex-grow border-red-300">
+        <hr class="flex-grow border-red-300" />
       </div>
     <% end %>
   </section>
 </div>
-
